build-win-aarch64: use jlink jre